<resources>
    <string name="app_name">NestedToolbar Demo</string>
    <string name="action_search">Search</string>
    <string name="tutorial_name">Card toolbar (Nested toolbar) in Android application</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="albania">Albania</string>
    <string name="algeria">Algeria</string>
    <string name="american_samoa">American Samoa</string>
    <string name="andorra">Andorra</string>
    <string name="angola">Angola</string>
    <string name="anguilla">Anguilla</string>
    <string name="antarctica">Antarctica</string>
    <string name="antigua_and_barbuda">Antigua and Barbuda</string>
    <string name="argentina">Argentina</string>
    <string name="armenia">Armenia</string>
    <string name="aruba">Aruba</string>
    <string name="australia">Australia</string>
    <string name="austria">Austria</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="bahamas">Bahamas</string>
    <string name="bahrain">Bahrain</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="barbados">Barbados</string>
    <string name="belarus">Belarus</string>
    <string name="belgium">Belgium</string>
    <string name="belize">Belize</string>
    <string name="benin">Benin</string>
    <string name="bermuda">Bermuda</string>
    <string name="bhutan">Bhutan</string>
    <string name="bolivia">Bolivia</string>
    <string name="bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="botswana">Botswana</string>
    <string name="brazil">Brazil</string>
    <string name="british_indian_ocean_territory">British Indian Ocean Territory</string>
    <string name="british_virgin_islands">British Virgin Islands</string>
    <string name="brunei">Brunei</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="burkina_faso">Burkina Faso</string>
    <string name="burma_myanmar">Burma (Myanmar)</string>
    <string name="burundi">Burundi</string>
    <string name="cambodia">Cambodia</string>
    <string name="cameroon">Cameroon</string>
    <string name="canada">Canada</string>
    <string name="cape_verde">Cape Verde</string>
    <string name="cayman_islands">Cayman Islands</string>
    <string name="central_african_republic">Central African Republic</string>
    <string name="chad">Chad</string>
    <string name="chile">Chile</string>
    <string name="china">China</string>
    <string name="christmas_island">Christmas Island</string>
    <string name="cocos_keeling_islands">Cocos (Keeling) Islands</string>
    <string name="colombia">Colombia</string>
    <string name="comoros">Comoros</string>
    <string name="cook_islands">Cook Islands</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="croatia">Croatia</string>
    <string name="cuba">Cuba</string>
    <string name="cyprus">Cyprus</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="democratic_republic_of_the_congo">Democratic Republic of the Congo</string>
    <string name="denmark">Denmark</string>
    <string name="djibouti">Djibouti</string>
    <string name="dominica">Dominica</string>
    <string name="dominican_republic">Dominican Republic</string>
    <string name="ecuador">Ecuador</string>
    <string name="egypt">Egypt</string>
    <string name="el_salvador">El Salvador</string>
    <string name="equatorial_guinea">Equatorial Guinea</string>
    <string name="eritrea">Eritrea</string>
    <string name="estonia">Estonia</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="falkland_islands">Falkland Islands</string>
    <string name="faroe_islands">Faroe Islands</string>
    <string name="fiji">Fiji</string>
    <string name="finland">Finland</string>
    <string name="france">France</string>
    <string name="french_polynesia">French Polynesia</string>
    <string name="gabon">Gabon</string>
    <string name="gambia">Gambia</string>
    <string name="gaza_strip">Gaza Strip</string>
    <string name="georgia">Georgia</string>
    <string name="germany">Germany</string>
    <string name="ghana">Ghana</string>
    <string name="gibraltar">Gibraltar</string>
    <string name="greece">Greece</string>
    <string name="greenland">Greenland</string>
    <string name="grenada">Grenada</string>
    <string name="guam">Guam</string>
    <string name="guatemala">Guatemala</string>
    <string name="guinea">Guinea</string>
    <string name="guinea_bissau">Guinea-Bissau</string>
    <string name="guyana">Guyana</string>
    <string name="haiti">Haiti</string>
    <string name="holy_see_vatican_city">Holy See (Vatican City)</string>
    <string name="honduras">Honduras</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungary">Hungary</string>
    <string name="iceland">Iceland</string>
    <string name="india">India</string>
    <string name="indonesia">Indonesia</string>
    <string name="iran">Iran</string>
    <string name="iraq">Iraq</string>
    <string name="ireland">Ireland</string>
    <string name="isle_of_man">Isle of Man</string>
    <string name="israel">Israel</string>
    <string name="italy">Italy</string>
    <string name="ivory_coast">Ivory Coast</string>
    <string name="jamaica">Jamaica</string>
    <string name="japan">Japan</string>
    <string name="jersey">Jersey</string>
    <string name="jordan">Jordan</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="kenya">Kenya</string>
    <string name="kiribati">Kiribati</string>
    <string name="kosovo">Kosovo</string>
    <string name="kuwait">Kuwait</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="laos">Laos</string>
    <string name="latvia">Latvia</string>
    <string name="lebanon">Lebanon</string>
    <string name="lesotho">Lesotho</string>
    <string name="liberia">Liberia</string>
    <string name="libya">Libya</string>
    <string name="liechtenstein">Liechtenstein</string>
    <string name="lithuania">Lithuania</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="macau">Macau</string>
    <string name="macedonia">Macedonia</string>
    <string name="madagascar">Madagascar</string>
    <string name="malawi">Malawi</string>
    <string name="malaysia">Malaysia</string>
    <string name="maldives">Maldives</string>
    <string name="mali">Mali</string>
    <string name="malta">Malta</string>
    <string name="marshall_islands">Marshall Islands</string>
    <string name="mauritania">Mauritania</string>
    <string name="mauritius">Mauritius</string>
    <string name="mayotte">Mayotte</string>
    <string name="mexico">Mexico</string>
    <string name="micronesia">Micronesia</string>
    <string name="moldova">Moldova</string>
    <string name="monaco">Monaco</string>
    <string name="mongolia">Mongolia</string>
    <string name="montenegro">Montenegro</string>
    <string name="montserrat">Montserrat</string>
    <string name="morocco">Morocco</string>
    <string name="mozambique">Mozambique</string>
    <string name="namibia">Namibia</string>
    <string name="nauru">Nauru</string>
    <string name="nepal">Nepal</string>
    <string name="netherlands">Netherlands</string>
    <string name="netherlands_antilles">Netherlands Antilles</string>
    <string name="new_caledonia">New Caledonia</string>
    <string name="new_zealand">New Zealand</string>
    <string name="nicaragua">Nicaragua</string>
    <string name="niger">Niger</string>
    <string name="nigeria">Nigeria</string>
    <string name="niue">Niue</string>
    <string name="norfolk_island">Norfolk Island</string>
    <string name="north_korea">North Korea</string>
    <string name="northern_mariana_islands">Northern Mariana Islands</string>
    <string name="norway">Norway</string>
    <string name="oman">Oman</string>
    <string name="pakistan">Pakistan</string>
    <string name="palau">Palau</string>
    <string name="panama">Panama</string>
    <string name="papua_new_guinea">Papua New Guinea</string>
    <string name="paraguay">Paraguay</string>
    <string name="peru">Peru</string>
    <string name="philippines">Philippines</string>
    <string name="pitcairn_islands">Pitcairn Islands</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="puerto_rico">Puerto Rico</string>
    <string name="qatar">Qatar</string>
    <string name="republic_of_the_congo">Republic of the Congo</string>
    <string name="romania">Romania</string>
    <string name="russia">Russia</string>
    <string name="rwanda">Rwanda</string>
    <string name="saint_barthelemy">Saint Barthelemy</string>
    <string name="saint_helena">Saint Helena</string>
    <string name="saint_kitts_and_nevis">Saint Kitts and Nevis</string>
    <string name="saint_lucia">Saint Lucia</string>
    <string name="saint_martin">Saint Martin</string>
    <string name="saint_pierre_and_miquelon">Saint Pierre and Miquelon</string>
    <string name="saint_vincent_and_the_grenadines">Saint Vincent and the Grenadines</string>
    <string name="samoa">Samoa</string>
    <string name="san_marino">San Marino</string>
    <string name="sao_tome_and_principe">Sao Tome and Principe</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="senegal">Senegal</string>
    <string name="serbia">Serbia</string>
    <string name="seychelles">Seychelles</string>
    <string name="sierra_leone">Sierra Leone</string>
    <string name="singapore">Singapore</string>
    <string name="slovakia">Slovakia</string>
    <string name="slovenia">Slovenia</string>
    <string name="solomon_islands">Solomon Islands</string>
    <string name="somalia">Somalia</string>
    <string name="south_africa">South Africa</string>
    <string name="south_korea">South Korea</string>
    <string name="spain">Spain</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="sudan">Sudan</string>
    <string name="suriname">Suriname</string>
    <string name="swaziland">Swaziland</string>
    <string name="sweden">Sweden</string>
    <string name="switzerland">Switzerland</string>
    <string name="syria">Syria</string>
    <string name="taiwan">Taiwan</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="tanzania">Tanzania</string>
    <string name="thailand">Thailand</string>
    <string name="timor_leste">Timor-Leste</string>
    <string name="togo">Togo</string>
    <string name="tokelau">Tokelau</string>
    <string name="tonga">Tonga</string>
    <string name="trinidad_and_tobago">Trinidad and Tobago</string>
    <string name="tunisia">Tunisia</string>
    <string name="turkey">Turkey</string>
    <string name="turkmenistan">Turkmenistan</string>
    <string name="turks_and_caicos_islands">Turks and Caicos Islands</string>
    <string name="tuvalu">Tuvalu</string>
    <string name="uganda">Uganda</string>
    <string name="ukraine">Ukraine</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>
    <string name="uruguay">Uruguay</string>
    <string name="us_virgin_islands">US Virgin Islands</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="vanuatu">Vanuatu</string>
    <string name="venezuela">Venezuela</string>
    <string name="vietnam">Vietnam</string>
    <string name="wallis_and_futuna">Wallis and Futuna</string>
    <string name="label_more_articles">Read more articles</string>
    <string name="label_source_code">Source code</string>
    <string name="label_follow_me_on_google_plus">Follow me on Google+</string>
    <string name="label_follow_me_on_twitter">Follow me on Twitter</string>
    <string name="label_follow_me_on_linked_in">Follow me on LinkedIn</string>
    <string name="label_join_to_facebook_community">Join to facebook community</string>
</resources>